# lcdtool

./: CMakeLists.txt  CMakePresets.json  README.md  display.hpp  lcd.c  lcdconfig.py  main.cpp  menu.hpp  pscrypt.cpp  pscrypt.hpp  ui.hpp  ui_main.hpp  view.hpp  view_browser.hpp  view_main.hpp  view_player.hpp  view_power_off.hpp
